working on the 1st media query 690px. finished left side for now, moving on to profile"
diff --git a/client/public/armada.css b/client/public/armada.css
index d3a88498..cc1a85e7 100644
--- a/client/public/armada.css
+++ b/client/public/armada.css
@@ -246,13 +246,7 @@ selected fleet
     max-width: 100px;
 }

-.ship-name {
-    text-align: center;
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto 0;
-    transition: all 0.4s;
-}
+

 .ship-name p {
     margin: 0 0 0 12px;
@@ -277,12 +271,6 @@ selected fleet

 .span-7-of-12 { width: 50%; }

-.chosen-ship {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
 .chosen-ship-container { margin: 20px 0; }

 .chosen-ship-container:first-child{ margin-top: 0; }
@@ -538,8 +526,8 @@ card display - right side
     align-items: center;
     padding: 0 4% 0 2%;
     margin:  5px 0 5px 50px;
-    border-left: 1px solid black;
-    width: 60%;
+    border-left: 1px solid #464646;
+    width: 82%;
 }
 .equipped-upgrades {

@@ -553,8 +541,6 @@ card display - right side
     height: 40px;
 }
 .upgrade-img {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
-    clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
     width: 60px;

 }
diff --git a/client/public/funny/emails.jpg b/client/public/funny/emails.jpg
new file mode 100644
index 00000000..f0898004
Binary files /dev/null and b/client/public/funny/emails.jpg differ
diff --git a/client/public/funny/google-the-droids-were-looking-for-google-search-im-feeling-21484906.png b/client/public/funny/google-the-droids-were-looking-for-google-search-im-feeling-21484906.png
new file mode 100644
index 00000000..fc11d4f3
Binary files /dev/null and b/client/public/funny/google-the-droids-were-looking-for-google-search-im-feeling-21484906.png differ
diff --git a/client/public/funny/obi-juan.jpg b/client/public/funny/obi-juan.jpg
new file mode 100644
index 00000000..4255592a
Binary files /dev/null and b/client/public/funny/obi

--- a/client/public/armada.css
+++ b/client/public/armada.css
@@ -246,13 +246,7 @@ selected fleet
     max-width: 100px;
 }
 
-.ship-name {
-    text-align: center;
-    vertical-align: middle;
-    display: inline-block;
-    margin: auto 0;
-    transition: all 0.4s;
-}
+
 
 .ship-name p {
     margin: 0 0 0 12px;
@@ -276,12 +270,6 @@ selected fleet
 .span-4-of-12 { width: 25%; }
 
 .span-7-of-12 { width: 50%; }
-
-.chosen-ship {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
 
 .chosen-ship-container { margin: 20px 0; }
 
@@ -538,8 +526,8 @@ card display - right side
     align-items: center;
     padding: 0 4% 0 2%;
     margin:  5px 0 5px 50px;
-    border-left: 1px solid black;
-    width: 60%;
+    border-left: 1px solid #464646;
+    width: 82%;
 }
 .equipped-upgrades {
 
@@ -553,8 +541,6 @@ card display - right side
     height: 40px;
 }
 .upgrade-img {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
-    clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
     width: 60px;
 
 }
