--- a/client/src/Components/css/Ships.css
+++ b/client/src/Components/css/Ships.css
@@ -26,3 +26,10 @@
     /*font-weight: bold;*/
     font-family: 'Orbitron', sans-serif;
 }
+
+@media screen and (min-width: 690px){
+.card-display {
+    width: 65%;
+    }
+}
+
