--- a/client/src/Components/css/Mobile.css
+++ b/client/src/Components/css/Mobile.css
@@ -20,7 +20,28 @@
     overflow: scroll;
     z-index: 1;
     padding-bottom: 120px;
-
+}
+.ship-name {
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    margin: auto 0;
+    transition: all 0.4s;
+    border: 1px solid #636363;
+    border-radius: 5px;
+    color: #636363;
+}
+.delete {
+    font-size: 20px;
+}
+.chosen-ship {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+.upgrade-name {
+    text-align: center;
 }
 .menu-show-mobile {
     width: 85%;
@@ -62,7 +83,7 @@
     width: 40%;
 }
 .ship-card img {
-    height: 50px;
+    height: 70px;
     margin: 10px 0;
     cursor: pointer;
     transition: all 0.6s;
