fixed pathing for squadrons, changed styles on profile diff --git a/client/public/armada.css b/client/public/armada.css index cc1a85e7..86722f4d 100644 --- a/client/public/armada.css +++ b/client/public/armada.css @@ -187,7 +187,7 @@ fleet display - left side  }
 #fleet-total {
-    width: 30%;
+    width: 40%;
     font-size: 40px;
 }

@@ -203,7 +203,7 @@ fleet display - left side
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 80%;
 }
 .points-display {
     display: flex;
diff --git a/client/public/images/cards/squadron/imperial/small-Aggressor.png b/client/public/images/cards/squadron/imperial/small-Aggressor.png
new file mode 100644
index 00000000..12ed80ca
Binary files /dev/null and b/client/public/images/cards/squadron/imperial/small-Aggressor.png differ
diff --git a/client/public/images/cards/squadron/imperial/small-Darth-vader.png b/client/public/images/cards/squadron/imperial/small-Darth-vader.png
new file mode 100644
index 00000000..ff002e87
Binary files /dev/null and b/client/public/images/cards/squadron/imperial/small-Darth-vader.png differ
diff --git a/client/public/images/cards/squadron/imperial/small-Mauler-mithel.png b/client/public/images/cards/squadron/imperial/small-Mauler-mithel.png
new file mode 100644
index 00000000..9225e1a0
Binary files /dev/null and b/client/public/images/cards/squadron/imperial/small-Mauler-mithel.png differ
diff --git a/client/public/images/cards/squadron/imperial/small-Soontir-fel.png b/client/public/images/cards/squadron/imperial/small-Soontir-fel.png
new file mode 100644
index 00000000..eb5b2ad9
Binary files /dev/null and b/client/public/images/cards/squadron/imperial/small-Soontir-fel.png differ
diff --git a/client/public/images/cards/squadron/imperial/small-black-squadron.png b/client/public/images/cards/squadron/imperial/small-black-squadron.png
new file mode 100644
index 00000000..195864a9
Binary files /dev/null and b/client/public/images/cards/squadron/impe

--- a/client/src/Components/css/Mobile.css
+++ b/client/src/Components/css/Mobile.css
@@ -78,13 +78,15 @@
 }
 .mobile-card-display {
     margin-top: 70px;
+    overflow: scroll;
+    overflow-scrolling: touch;
 }
 .ship-card {
     width: 40%;
 }
 .ship-card img {
-    height: 70px;
-    margin: 10px 0;
+    height: 45px;
+    margin: 5px 0;
     cursor: pointer;
     transition: all 0.6s;
 }
@@ -101,7 +103,6 @@
 }
 #max-points-label {
     font-size: 15px;
-    margin-right: 8px;
 }
 .current-points {
     font-size: 15px;
