--- a/client/src/Components/css/Profile.css
+++ b/client/src/Components/css/Profile.css
@@ -37,8 +37,12 @@
     color: #00009e;
 }
 .display-upgrade {
- display: flex;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    font-size: 15px;
 }
 .display-upgrade-points {
     display: flex;
@@ -62,18 +66,22 @@
     width: 100%;
     padding-right: 3%;
     padding-left: 3%;
+    padding-bottom: 10%;
     margin-right: auto;
     margin-left: auto;
+    overflow-x: scroll;
+    overflow-scrolling: touch;
 }
 
 .display-ship-img {
     height: 70px;
 }
 .display-ship-img img {
-    height: 70px;
-    width: 160px;
+    height: 60px;
+    width: 130px;
     border-radius: 10px;
 }
+
 .jumbotron h1 {
     padding-top: 5%;
     margin-top: 0;
@@ -125,10 +133,13 @@
     margin-left: 10%;
 }
 .display-ship-name {
-    margin: 10px 1px;
+    text-align: center;
+    font-size: 15px;
+    padding: 4%;
 }
 .display-upgrade-img img {
     height: 50px;
+    border-radius: 8px;
 }
 .upgrade-cont {
     display: flex;
