--- a/client/src/Components/css/Grid.css
+++ b/client/src/Components/css/Grid.css
@@ -68,7 +68,7 @@
         width: 100%;
     }
     .span-1-of-2 {
-        width: 100%;
+        /*width: 100%;*/
     }
 }
 
@@ -119,7 +119,7 @@
 }
 
 .span-1-of-4 {
-    width: 23.8%;
+    /*width: 23.8%;*/
 }
 
 
@@ -136,7 +136,7 @@
         width: 100%;
     }
     .span-1-of-4 {
-        width: 100%;
+        /*width: 100%;*/
     }
 }
 
