--- a/client/src/Components/css/Header.css
+++ b/client/src/Components/css/Header.css
@@ -37,7 +37,11 @@
 
 .small-nav {
     position: fixed;
+    overflow: hidden;
     width: 100%;
+}
+#menu-holder {
+    /*width: 49.2%;*/
 }
 
 @media screen and (min-width: 480px) {
@@ -59,6 +63,9 @@
     .header-container li {
         padding: 0 15px;
     }
+}
+.link-container {
+    width: 49%;
 }
 
 .icon {
