--- a/client/src/Components/css/Left.css
+++ b/client/src/Components/css/Left.css
@@ -20,6 +20,12 @@
     width: 80%;
     margin: 0;
 }
+.points-container {
+    display: flex !important;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 50%;
+}
 
 #fleet-total,
 .points-display {
@@ -27,11 +33,48 @@
 }
 #fleet-total {
     padding: 5px;
+    width: 50%;
+}
+.max-points-input-cont {
+    text-align: center;
+}
+.big-points-container {
+    width: 100%;
 }
 
 #fleet-name {
-    padding: 10px;
+    width: 75%;
+    margin: 0 auto;
+    font-size: 18px;
+    border: none;
+    border-bottom: 1px solid #cbcbcb;
+    padding: 5px;
+    text-align: center;
+
+    font-family: 'Orbitron', sans-serif;
 }
+.max-points {
+    display: flex !important;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.upgrade-bar button {
+    border: none;
+    background-color: gray;
+    margin: 3px 10px 0 0;
+    padding: 5px 5px 0 5px;
+    transition: all 0.3s;
+
+}
+
+.upgrade-bar button:hover {
+    background-color: black;
+    transform: scale(1.1);
+}
+
+.upgrade-bar button img { height: 20px; }
+
 @media screen and (min-width: 690px){
     .save-text {
         padding: 10px;
