--- a/client/src/Components/css/Squadrons.css
+++ b/client/src/Components/css/Squadrons.css
@@ -1,4 +1,10 @@
+.squad-card {
+    width: 49% !important;
+    float: left;
+}
+
 .squad-card img {
     height: 80px;
     border-radius: 8px;
+    margin: 10px;
 }
