--- a/client/src/Components/css/Ships.css
+++ b/client/src/Components/css/Ships.css
@@ -29,7 +29,7 @@
     color: white;
     font-size: 14px;
     /*font-weight: bold;*/
-    font-family: 'Orbitron', sans-serif;
+    font-family: "Fjalla One", sans-serif
 }
 .ship-name {
     padding: 5px;
