--- a/client/src/css/Ships.css
+++ b/client/src/css/Ships.css
@@ -35,6 +35,16 @@
     padding: 5px;
 }
 
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.cards-container > div {
+    width: 29%;
+    justify-content: space-between;
+    margin: 2vh;
+}
+
 @media screen and (min-width: 690px){
 .card-display {
     width: 65%;
